# dragonfly-reverb

./: .gitignore  .gitmodules  Makefile  Makefile.mk  README.md  collage.xcf  create_assets.sh  dragonfly-reverb.kdev4  dub.json  dub.selections.json  gdb.txt  gui.d  main.d  module-au.lst  module-lv2.lst  module-vst3.lst  plugin.json  valgrind-output
.github/: FUNDING.yml
.github/workflows/: build.yml
.kdev4/: dragonfly-reverb.kdev4
common/: AbstractDSP.hpp  AbstractUI.cpp  AbstractUI.hpp  Bitstream_Vera_Sans_Regular.cpp  Bitstream_Vera_Sans_Regular.hpp  DragonflyVersion.h  LabelledKnob.cpp  LabelledKnob.hpp  Makefile  Makefile.mk  NotoSans_Regular.ttf.hpp  Param.hpp  Selection.cpp  Selection.hpp  Spectrogram.cpp  Spectrogram.hpp  UI.hpp  fv3_config.h  stuff
common/freeverb/: AUTHORS  README  allpass.cpp  biquad.cpp  biquad.hpp  biquad_t.hpp  blockDelay.cpp  blockDelay.hpp  comb.cpp  compmodel.hpp  delay.cpp  delay.hpp  delay_t.hpp  delayline.cpp  delayline.hpp  delayline_t.hpp  dl_gardner.cpp  dl_gardner.hpp  dl_gardner_t.hpp  earlyref.cpp  earlyref.hpp  earlyref_t.hpp  efilter_t.hpp  fir3bandsplit.cpp  fir3bandsplit.hpp  fir3bandsplit_t.hpp  firfilter.cpp  firwindow.hpp  frag.cpp  frag_t.hpp  fv3_type_float.h  irbase.cpp  irbase_t.hpp  irmodel1.cpp  irmodel2.cpp  irmodel2.hpp  irmodel2zl.cpp  irmodel2zl_t.hpp  irmodel3.cpp  irmodel3.hpp  (+43 more)
common/kiss_fft/: COPYING.txt
common/libsamplerate2/: common_c.h  fastest_coeffs.h  float_cast.h  high_qual_coeffs.h  samplerate2_common.h  samplerate_common.c  src_zoh.c
common/optimization/: Makefile.optimization.mk  avx.cpp  avx.hpp  default.cpp  default.hpp  optimization.cpp  optimization.hpp
docs/: donations.html  dragonfly-early-manual.html  dragonfly-hall-manual.html  dragonfly-plate-manual.html  dragonfly-room-manual.html  index.html  manuals.html
docs/fonts/: OFL.txt
docs/styles/: common.css  landing.css  manual.css
dsp/: early.d  effects.d  filters.d  hall.d  oscillator.d  plate.d  room.d  tank.d
freeverb3/: Makefile
freeverb3/freeverb/: Makefile.am  allpass.cpp  allpass.hpp  allpass_t.hpp  biquad.cpp  biquad.hpp  biquad_t.hpp  blockDelay.cpp  blockDelay.hpp  blockDelay_t.hpp  comb.cpp  comb.hpp  comb_t.hpp  compmodel.cpp  compmodel.hpp  compmodel_t.hpp  delay.cpp  delay.hpp  delay_t.hpp  delayline.cpp  delayline.hpp  delayline_t.hpp  dl_gardner.cpp  dl_gardner.hpp  dl_gardner_t.hpp  earlyref.cpp  earlyref.hpp  earlyref_t.hpp  efilter.cpp  efilter.hpp  efilter_t.hpp  fir3bandsplit.cpp  fir3bandsplit.hpp  fir3bandsplit_t.hpp  firfilter.cpp  firfilter.hpp  firfilter_t.hpp  firwindow.cpp  firwindow.hpp  firwindow_t.hpp  (+92 more)
freeverb3/libsamplerate2/: Makefile.am  common.h  float_cast.h  mid_qual_coeffs.h  samplerate.c  samplerate2.h  samplerate2_t.h  src.make  src_common.c  src_linear.c  src_sinc.c  type_float.h
gfx/: background.xcf  render-dial.py  render-slider.py
juce-plugins/: .gitignore
juce-plugins/Common/: BasicKnob.cpp  BasicKnob.h  BasicLookAndFeel.cpp  BasicLookAndFeel.h  IconButton.cpp  IconButton.h  InfoImage.h  LabeledKnob.cpp  LabeledKnob.h  ParameterListeners.h
juce-plugins/DragonflyER/: DragonflyER.jucer
juce-plugins/DragonflyER/Source/: DragonflyEREditor.cpp  DragonflyEREditor.h  DragonflyERParameters.cpp  DragonflyERParameters.h  DragonflyERProcessor.cpp  DragonflyERProcessor.h
juce-plugins/DragonflyHall/: DragonflyHall.jucer
juce-plugins/DragonflyHall/Source/: DragonflyHallEditor.cpp  DragonflyHallEditor.h  DragonflyHallParameters.cpp  DragonflyHallParameters.h  DragonflyHallProcessor.cpp  DragonflyHallProcessor.h
juce-plugins/DragonflyPlate/: DragonflyPlate.jucer
juce-plugins/DragonflyPlate/Source/: DragonflyPlateEditor.cpp  DragonflyPlateEditor.h  DragonflyPlateParameters.cpp  DragonflyPlateParameters.h  DragonflyPlateProcessor.cpp  DragonflyPlateProcessor.h
juce-plugins/DragonflyRoom/: DragonflyRoom.jucer
juce-plugins/DragonflyRoom/Source/: DragonflyRoomEditor.cpp  DragonflyRoomEditor.h  DragonflyRoomParameters.cpp  DragonflyRoomParameters.h  DragonflyRoomProcessor.cpp  DragonflyRoomProcessor.h
juce-plugins/Installers/MacOS/: DragonflyReverbs.pkgproj
juce-plugins/Installers/Windows/: DragonflyReverbs.iss
jucewrapper/: CMakeLists.txt  DragonflyWrapper.cpp
plugins/: Makefile.mk
plugins/dragonfly-early-reflections/: Artwork.cpp  Artwork.hpp  DSP.cpp  DSP.hpp  DistrhoPluginInfo.h  Makefile  Plugin.cpp  Plugin.hpp  UI.cpp  UI.hpp
plugins/dragonfly-hall-reverb/: AbstractUI.cpp  Artwork.hpp  DSP.cpp  DSP.hpp  DistrhoPluginInfo.h  DragonflyReverbArtwork.hpp  DragonflyReverbDSP.cpp  DragonflyReverbDSP.hpp  DragonflyReverbPlugin.cpp  DragonflyReverbPlugin.hpp  DragonflyReverbUI.cpp  DragonflyReverbUI.hpp  LabelledKnob.cpp  Makefile  Plugin.cpp  Plugin.hpp  Spectrogram.cpp  Spectrogram.hpp  UI.cpp  UI.hpp  fft.h
plugins/dragonfly-plate-reverb/: AbstractUI.hpp  Artwork.hpp  DSP.cpp  DSP.hpp  DistrhoPluginInfo.h  Makefile  Plugin.cpp  Plugin.hpp  UI.cpp  UI.hpp
plugins/dragonfly-reverb/: .DragonflyReverbUI.cpp.kate-swp  DistrhoPluginInfo.h  DragonflyReverbArtwork.hpp  DragonflyReverbDSP.cpp  DragonflyReverbDSP.hpp  DragonflyReverbPlugin.cpp  DragonflyReverbPlugin.hpp  DragonflyReverbUI.cpp  DragonflyReverbUI.hpp  LabelledKnob.cpp  LabelledKnob.hpp  Makefile  NotoSans_Regular.ttf.cpp  NotoSans_Regular.ttf.hpp  Spectrogram.cpp  Spectrogram.hpp
plugins/dragonfly-room-reverb/: Artwork.hpp  DSP.cpp  DSP.hpp  DistrhoPluginInfo.h  DragonflyReverbArtwork.hpp  DragonflyReverbDSP.cpp  DragonflyReverbDSP.hpp  DragonflyReverbPlugin.cpp  DragonflyReverbPlugin.hpp  DragonflyReverbUI.cpp  DragonflyReverbUI.hpp  LabelledKnob.cpp  LabelledKnob.hpp  Makefile  Plugin.cpp  Plugin.hpp  Spectrogram.cpp  Spectrogram.hpp  UI.cpp  UI.hpp  fft.c
swag/: PSF-Dragonfly.xcf  logo-azure.xcf  logo-brass-steel.xcf  logo-green-brown.xcf  logo-orange-yellow.xcf  sticker-azure.xcf  sticker-brass.xcf  sticker-green.xcf  sticker-orange.xcf  sticker-template.xcf
util/: background.xcf  earlypresets.py  render-dial.py
widgets/: effect.d  gainslider.d  label.d  select.d  tab.d  textbox.d
(+11 files in other folders)
